// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> renders control action dropdown 1`] = `
<div
  class="dropdown"
>
  <button
    class="dropdownButton dropdownControlAction"
    type="button"
  >
    <span
      class="dropdownIcon"
    >
      <svg
        aria-label="Open menu"
        class="icon"
        focusable="false"
        role="img"
        viewBox="0 0 20 20"
      >
        <use
          xlink:href="#my-icon"
        />
      </svg>
    </span>
    <span
      class="dropdownLabel"
    >
      add
    </span>
    <span
      class="chevronIcon"
    >
      <svg
        aria-label="Open menu"
        class="icon"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="#undefined"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`<Dropdown /> renders default view 1`] = `
<div
  class="dropdown"
>
  <button
    class="dropdownButton"
    type="button"
  >
    <span
      class="dropdownIcon"
    >
      <svg
        aria-label="Open menu"
        class="icon"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="#undefined"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`<Dropdown /> renders drop down with icon 1`] = `
<div
  class="dropdown"
>
  <button
    class="dropdownButton"
    type="button"
  >
    <span
      class="dropdownIcon"
    >
      <svg
        aria-label="Open menu"
        class="icon"
        focusable="false"
        role="img"
        viewBox="0 0 20 20"
      >
        <use
          xlink:href="#my-icon"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`<Dropdown /> renders drop down with icon and label 1`] = `
<div
  class="dropdown"
>
  <button
    class="dropdownButton"
    type="button"
  >
    <span
      class="dropdownIcon"
    >
      <svg
        aria-label="Open menu"
        class="icon"
        focusable="false"
        role="img"
        viewBox="0 0 20 20"
      >
        <use
          xlink:href="#my-icon"
        />
      </svg>
    </span>
    <span
      class="dropdownLabel"
    >
      add
    </span>
  </button>
</div>
`;

exports[`<Dropdown /> renders drop down with only label 1`] = `
<div
  class="dropdown"
>
  <button
    class="dropdownButton"
    type="button"
  >
    <span
      class="dropdownLabel"
    >
      add
    </span>
  </button>
</div>
`;

exports[`<Dropdown /> renders reversed color control action dropdown 1`] = `
<div
  class="dropdown"
>
  <button
    class="dropdownButton dropdownControlAction reversedColor"
    type="button"
  >
    <span
      class="dropdownIcon"
    >
      <svg
        aria-label="Open menu"
        class="icon"
        focusable="false"
        role="img"
        viewBox="0 0 20 20"
      >
        <use
          xlink:href="#my-icon"
        />
      </svg>
    </span>
    <span
      class="dropdownLabel"
    >
      add
    </span>
    <span
      class="chevronIcon"
    >
      <svg
        aria-label="Open menu"
        class="icon"
        focusable="false"
        role="img"
      >
        <use
          xlink:href="#undefined"
        />
      </svg>
    </span>
  </button>
</div>
`;
